3/2/2025 11:03 PM: - Add employee details view with toggling edit mode and updating details - Add Assigning to departments, roles, positions in employee details view